Fix collapser and side-by-side rendering

--- a/packages/notebook-extension/style/base.css
+++ b/packages/notebook-extension/style/base.css
@@ -53,9 +53,6 @@ body[data-notebook='notebooks'] .jp-Notebook.jp-mod-scrollPastEnd::after {
 
 body[data-notebook='notebooks']
   .jp-Notebook
-  .jp-Notebook-cell:not(:first-child)::after,
-body[data-notebook='notebooks']
-  .jp-Notebook
   .jp-Notebook-cell:not(:first-child)::before {
   content: ' ';
   height: 100%;
@@ -177,13 +174,14 @@ body[data-format='mobile'] .jp-Notebook > *:first-child {
 
 /* Virtual Notebook fixes */
 
-/* TODO: remove when https://github.com/jupyterlab/jupyterlab/pull/13154 is released */
 body[data-notebook='notebooks'] .jp-WindowedPanel-window {
+  background: var(--jp-layout-color0);
+  /* TODO: remove when https://github.com/jupyterlab/jupyterlab/pull/13154 is released */
   width: unset;
 }
 
-/* TODO: remove when https://github.com/jupyterlab/jupyterlab/pull/13157 is released */
 body[data-notebook='notebooks'] .jp-WindowedPanel-inner {
+  /* TODO: remove when https://github.com/jupyterlab/jupyterlab/pull/13157 is released */
   width: unset;
 }
 
